--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,10 @@ Documentation:
 LineLength:
   Max: 120
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
 
